--- a/index.html
+++ b/index.html
@@ -206,7 +206,9 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Stay updated</button>
+<!--           <button class="btn btn-success btn-large">Stay updated</button> -->
+	<a class="coinbase-button" data-code="3ceb99665418a12e728885e340926740" data-button-style="donation_large" href="https://coinbase.com/checkouts/3ceb99665418a12e728885e340926740">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+
           </div>
           <div class="span8 offset2 social">
 		<!-- AddThis Button BEGIN -->
